# vasp_init

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: Framework_0_initial.vasp  H2_TraPPE.def  NH3_TraPPE.def  POSCAR_with_ions.vasp  POSCAR_with_ions_NH3.vasp
examples/: README.md  STANDALONE_README.md  add_h2_example.sh  add_ions.py  add_nh3.py  full_workflow.py  run_data_example.sh  run_workflow_custom.sh
tests/: test_h2_addition.py  test_io.py  test_molecules.py  test_nh3_custom_offset.py  test_selective_dynamics.py
vasp_init/: __init__.py  cli.py  geometry.py  io.py  molecules.py  workflow.py
vasp_init/cli/: __init__.py  __main__.py  add_h2.py  add_ions.py  add_nh3.py  main.py
